syntax = "proto3";

package pb;

option go_package = "rentals/pb";

service Items {
    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {}
}

message CreateItemRequest {
    Item item = 1;
}

message CreateItemResponse {
    bool result = 1;
}

message Item {
    string name = 1;
    string value = 2;
    enum Type {
        TYPEUNKNOWN = 0;
        TYPECHAIR = 1;
      }
      Type type = 3;
}
